--- a/ClientApp/src/components/NavMenu.css
+++ b/ClientApp/src/components/NavMenu.css
@@ -4,6 +4,11 @@
   word-break: break-all;
 }
 
+nav {
+  background-color: rgba(21, 0, 41, 0.808);
+  color: white;
+}
+
 html {
   font-size: 14px;
 }
@@ -14,5 +19,5 @@ html {
 }
 
 .box-shadow {
-  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+  box-shadow: 0 0.25rem 0.75rem rgba(0, 0, 0, 0.05);
 }
