--- a/ClientApp/src/custom.css
+++ b/ClientApp/src/custom.css
@@ -4,11 +4,16 @@ a {
 }
 
 code {
-  color: #E01A76;
+  color: #e01a76;
 }
 
 .btn-primary {
   color: #fff;
   background-color: #1b6ec2;
   border-color: #1861ac;
+}
+
+body {
+  background-color: rgba(136, 3, 118, 0.048);
+  font-family: "Kanit", sans-serif;
 }
