--- a/ClientApp/src/components/NavMenu.css
+++ b/ClientApp/src/components/NavMenu.css
@@ -21,3 +21,12 @@ html {
 .box-shadow {
   box-shadow: 0 0.25rem 0.75rem rgba(0, 0, 0, 0.05);
 }
+
+#navItem {
+  margin: 7px;
+  border-radius: 25px;
+}
+
+#navItem:hover {
+  background-color: rgba(255, 255, 255, 0.288);
+}
