--- a/ClientApp/src/components/NavMenu.css
+++ b/ClientApp/src/components/NavMenu.css
@@ -2,6 +2,7 @@
   white-space: normal;
   text-align: center;
   word-break: break-all;
+  font-family: "Dancing Script", cursive;
 }
 
 nav {
@@ -19,7 +20,7 @@ html {
 }
 
 .box-shadow {
-  box-shadow: 0 0.25rem 0.75rem rgba(0, 0, 0, 0.05);
+  box-shadow: 0 0.25rem 0.75rem rgba(0, 0, 0, 0.493);
 }
 
 #navItem {
